@startuml
  entity Member {
    role: VARCHAR
  }    
  entity Task {
    name: VARCHAR,
    description: VARCHAR,
    deadline: DATETIME
  }
  entity User {
    name: VARCHAR,
    email: VARCHAR,
    nickname: VARCHAR,
    password: VARCHAR,
    avatar: VARCHAR
  }
  entity Project {
    name: VARCHAR,
    icon: VARCHAR,
    repository: VARCHAR,
    site_url: VARCHAR,
    description: VARCHAR,
    deadline: DATETIME
  }
  entity Artifact {
    name: VARCHAR,
    description: VARCHAR,
    type: VARCHAR,
    url: VARCHAR
  }
  entity Action {
    task: TASK,
    user: User,
    date: DATE
  }
  
  entity State {
    name: VARCHAR
  } 
  
  entity ArtifactTaskRelation {
    task: TASK,
    artifact: ARTIFACT,
    role: VARCHAR
  }
  
  Action "0, *" -d- "0, 1" User
  Action "0, *" -l- "1, 1" Task
  
  Artifact "1, 1" -- "0, *" ArtifactTaskRelation
  Task "1, 1" -- "0, *" ArtifactTaskRelation
  
  
  Member "0, *" -l- "1, 1" Project
  Member "0, *" -d- "1, 1" User
  
  Action "0, *" -- "1, 1" State 
  
  Task "0, *" -u- "1, 1" Project
@enduml
